clusters/rpi/apps/breakout/workload.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: breakout
  labels:
    app.kubernetes.io/name: breakout
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: breakout
  namespace: breakout
  labels:
    app.kubernetes.io/name: breakout
    app.kubernetes.io/part-of: breakout
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: breakout
  template:
    metadata:
      labels:
        app.kubernetes.io/name: breakout
        app.kubernetes.io/part-of: breakout
    spec:
      containers:
        - name: breakout
          image: ghcr.io/bieniucieniu/breakout:master # {"$imagepolicy": "flux-system:breakout"}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: breakout
  namespace: breakout
  labels:
    app.kubernetes.io/name: breakout
    app.kubernetes.io/part-of: breakout
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: breakout
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
