clusters/rpi/apps/breakout/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: breakout
  namespace: breakout
  labels:
    app.kubernetes.io/name: breakout
    app.kubernetes.io/part-of: breakout
spec:
  parentRefs:
    - name: traefik
      namespace: kube-system
      sectionName: web
  hostnames:
    - breakout.kurwidolek.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: breakout
          port: 8080
